-Admin_AuxiliaryController contents moved to Indi_Controller_Aixiliary, mispell of 'auxillary' fixed -added titleFields in Admin_Temporarycontroller for 'vkenguru' project -added ability for login box title and window title to be picked from config.ini -added tooltip for remember-me checkbox at login box -fixed combo colorbox margin, .x-tip-anchor-(rihgt|left) styles -added static offsets for used tooltips, for them to appear per equal Y coord -fixed nav-to-nested url building -scope aix and page number adjusting wrapped with an additional 'if' clause -added check for evalfield non-emptyness, before eval these contents as *_Row::__construct() -added ability to detect color box from row property value, in addition to row-property value, got from foreign row, in Rowset->toGridData() method

--- a/css/admin/indi.combo.css
+++ b/css/admin/indi.combo.css
@@ -19,7 +19,7 @@
 /* Combo color box */
 .i-combo .i-combo-single .i-combo-color-box-cell {width: 1px;}
 .i-combo .i-combo-color-box {width: 14px; height: 9px; display: inline-block;}
-.i-combo .i-combo-single .i-combo-color-box-cell .i-combo-color-box{margin: 0px 1px 0 3px;}
+.i-combo .i-combo-single .i-combo-color-box-cell .i-combo-color-box{margin: 0px 2px 0 3px;}
 
 /* Combo multiple selected items*/
 .i-combo .i-combo-multiple .i-combo-selected-item {
